--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "cryptolive",
   "version": "1.0.0",
   "description": "Live Crypto Forcasting using Socket IO and NodeJS",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/brennerhaverlock/CryptoLive/issues"
   },
-  "homepage": "https://github.com/brennerhaverlock/CryptoLive#readme"
+  "homepage": "https://github.com/brennerhaverlock/CryptoLive#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "request": "^2.88.2",
+    "socket.io": "^4.2.0"
+  }
 }
